--- a/io7m-jequality-core/pom.xml
+++ b/io7m-jequality-core/pom.xml
@@ -208,6 +208,7 @@
             <phase>package</phase>
             <goals>
               <goal>jar</goal>
+              <goal>test-jar</goal>
             </goals>
             <configuration>
               <archive>
