--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,6 @@
     </license>
   </licenses>
 
-
   <scm>
     <url>https://github.com/io7m/jequality</url>
     <connection>scm:git:https://github.com/io7m/jequality</connection>
@@ -66,6 +65,11 @@
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
+
+  <ciManagement>
+    <system>Travis CI</system>
+    <url>https://travis-ci.org/io7m/jequality</url>
+  </ciManagement>
 
   <prerequisites>
     <maven>3.0.4</maven>
