--- a/io7m-jequality-core/pom.xml
+++ b/io7m-jequality-core/pom.xml
@@ -56,7 +56,11 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Export-Package>com.io7m.jequality</Export-Package>
+            <Export-Package>
+              com.io7m.jequality,
+              com.io7m.jequality.annotations,
+              com.io7m.jequality.validator
+            </Export-Package>
           </instructions>
         </configuration>
       </plugin>
