--- a/com.io7m.jequality.checkstyle/pom.xml
+++ b/com.io7m.jequality.checkstyle/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.io7m.jequality</groupId>
     <artifactId>com.io7m.jequality</artifactId>
-    <version>1.0.5</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>com.io7m.jequality.checkstyle</artifactId>
 
@@ -16,15 +16,5 @@
   <name>com.io7m.jequality.checkstyle</name>
   <description>~Equality handling (Checkstyle policy)</description>
   <url>http://io7m.github.io/jequality/</url>
-
-  <properties>
-    <io7m.api.previousArtifactId>io7m-jequality-checkstyle</io7m.api.previousArtifactId>
-  </properties>
-
-  <scm>
-    <url>${project.parent.scm.url}</url>
-    <connection>${project.parent.scm.connection}</connection>
-    <developerConnection>${project.parent.scm.developerConnection}</developerConnection>
-  </scm>
 
 </project>
