--- a/com.io7m.jequality.core/pom.xml
+++ b/com.io7m.jequality.core/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.io7m.jequality</groupId>
     <artifactId>com.io7m.jequality</artifactId>
-    <version>1.0.5</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>com.io7m.jequality.core</artifactId>
 
@@ -17,22 +17,7 @@
   <description>Equality handling (Core)</description>
   <url>http://io7m.github.io/jequality/</url>
 
-  <properties>
-    <io7m.api.previousArtifactId>io7m-jequality-core</io7m.api.previousArtifactId>
-  </properties>
-
-  <scm>
-    <url>${project.parent.scm.url}</url>
-    <connection>${project.parent.scm.connection}</connection>
-    <developerConnection>${project.parent.scm.developerConnection}
-    </developerConnection>
-  </scm>
-
   <dependencies>
-    <dependency>
-      <groupId>com.io7m.jnull</groupId>
-      <artifactId>com.io7m.jnull.core</artifactId>
-    </dependency>
     <dependency>
       <groupId>com.io7m.junreachable</groupId>
       <artifactId>com.io7m.junreachable.core</artifactId>
@@ -67,6 +52,12 @@
             </Export-Package>
           </instructions>
         </configuration>
+      </plugin>
+
+      <!-- Determine test coverage -->
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
