--- a/com.io7m.jequality.documentation/pom.xml
+++ b/com.io7m.jequality.documentation/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.io7m.jequality</groupId>
     <artifactId>com.io7m.jequality</artifactId>
-    <version>1.0.5</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>com.io7m.jequality.documentation</artifactId>
 
@@ -18,26 +18,14 @@
   <url>http://io7m.github.io/jequality/</url>
 
   <properties>
-    <io7m.api.previousArtifactId>io7m-jequality-documentation</io7m.api.previousArtifactId>
     <mdep.analyze.skip>true</mdep.analyze.skip>
   </properties>
-
-  <scm>
-    <url>${project.parent.scm.url}</url>
-    <connection>${project.parent.scm.connection}</connection>
-    <developerConnection>${project.parent.scm.developerConnection}</developerConnection>
-  </scm>
 
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>com.io7m.jequality.core</artifactId>
       <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.io7m.jnull</groupId>
-      <artifactId>com.io7m.jnull.core</artifactId>
     </dependency>
   </dependencies>
 
@@ -172,7 +160,7 @@
         </executions>
       </plugin>
 
-      <!-- Unpack the documentation archive to the parent's generated site staging directory. -->
+      <!-- Unpack the documentation archive to the parent's generated site minisite directory. -->
       <!-- This is arguably abusive, but there appears to be no other way to achieve it. -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -189,7 +177,7 @@
               <verbose>true</verbose>
               <fileset>
                 <directory>${project.build.directory}/${project.name}-${project.version}.zip/${project.name}-${project.version}/</directory>
-                <outputDirectory>${project.parent.build.directory}/staging/documentation/</outputDirectory>
+                <outputDirectory>${project.parent.build.directory}/minisite/documentation/</outputDirectory>
               </fileset>
             </configuration>
           </execution>
