--- a/com.io7m.jequality.documentation/pom.xml
+++ b/com.io7m.jequality.documentation/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.io7m.jequality</groupId>
     <artifactId>com.io7m.jequality</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
   <artifactId>com.io7m.jequality.documentation</artifactId>
 
@@ -134,6 +134,9 @@
               <dependencySourceIncludes>
                 <dependencySourceSet>com.io7m.jequality*</dependencySourceSet>
               </dependencySourceIncludes>
+              <sourceFileExcludes>
+                <sourceFileExclude>**/module-info.java</sourceFileExclude>
+              </sourceFileExcludes>
             </configuration>
           </execution>
         </executions>
