--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,11 @@
         <artifactId>com.io7m.junreachable.core</artifactId>
         <version>2.1.1</version>
       </dependency>
-
+      <dependency>
+        <groupId>com.io7m.primogenitor</groupId>
+        <artifactId>com.io7m.primogenitor.support</artifactId>
+        <version>5.0.0</version>
+      </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
