--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,8 @@
   </distributionManagement>
 
   <ciManagement>
-    <system>Travis CI</system>
-    <url>https://travis-ci.org/io7m/jequality</url>
+    <system>GitHub Actions</system>
+    <url>https://github.com/jequality/actions</url>
   </ciManagement>
 
   <prerequisites>
