--- a/com.io7m.jequality.core/pom.xml
+++ b/com.io7m.jequality.core/pom.xml
@@ -8,19 +8,29 @@
   <parent>
     <groupId>com.io7m.jequality</groupId>
     <artifactId>com.io7m.jequality</artifactId>
-    <version>2.1.0</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>com.io7m.jequality.core</artifactId>
 
   <packaging>jar</packaging>
   <name>com.io7m.jequality.core</name>
   <description>Equality handling (Core)</description>
-  <url>http://io7m.github.io/jequality/</url>
+  <url>https://www.io7m.com/software/jequality</url>
 
   <dependencies>
     <dependency>
       <groupId>com.io7m.junreachable</groupId>
       <artifactId>com.io7m.junreachable.core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.annotation.bundle</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.annotation.versioning</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -32,35 +42,6 @@
 
   <build>
     <plugins>
-      <!-- Check style -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-      </plugin>
-
-      <!-- Analyze semantic versioning -->
-      <plugin>
-        <groupId>biz.aQute.bnd</groupId>
-        <artifactId>bnd-baseline-maven-plugin</artifactId>
-      </plugin>
-
-      <!-- Spot bugs -->
-      <plugin>
-        <groupId>com.github.spotbugs</groupId>
-        <artifactId>spotbugs-maven-plugin</artifactId>
-      </plugin>
-
-      <!-- Produce OSGi manifest -->
-      <plugin>
-        <groupId>biz.aQute.bnd</groupId>
-        <artifactId>bnd-maven-plugin</artifactId>
-        <configuration>
-          <bnd><![CDATA[
-            Export-Package: com.io7m.jequality, com.io7m.jequality.annotations, com.io7m.jequality.validator
-]]></bnd>
-        </configuration>
-      </plugin>
-
       <!-- Ignore dependencies that bytecode analysis gets wrong. -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
