--- a/com.io7m.jequality.documentation/pom.xml
+++ b/com.io7m.jequality.documentation/pom.xml
@@ -8,14 +8,14 @@
   <parent>
     <groupId>com.io7m.jequality</groupId>
     <artifactId>com.io7m.jequality</artifactId>
-    <version>2.1.0</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>com.io7m.jequality.documentation</artifactId>
 
   <packaging>jar</packaging>
   <name>com.io7m.jequality.documentation</name>
   <description>Equality handling (Documentation)</description>
-  <url>http://io7m.github.io/jequality/</url>
+  <url>https://www.io7m.com/software/jequality</url>
 
   <properties>
     <mdep.analyze.skip>true</mdep.analyze.skip>
@@ -26,6 +26,17 @@
       <groupId>${project.groupId}</groupId>
       <artifactId>com.io7m.jequality.core</artifactId>
       <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.annotation.bundle</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.annotation.versioning</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
