--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 
   <groupId>com.io7m.jequality</groupId>
   <artifactId>com.io7m.jequality</artifactId>
-  <version>2.1.0</version>
+  <version>3.0.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
   <name>com.io7m.jequality</name>
   <description>Equality handling</description>
-  <url>http://github.com/io7m/jequality</url>
+  <url>https://www.io7m.com/software/jequality</url>
 
   <modules>
     <module>com.io7m.jequality.core</module>
@@ -23,14 +23,13 @@
   </modules>
 
   <properties>
-    <com.codacy.id>0986dbfb63924ddcbfa19fcc35986e81</com.codacy.id>
     <io7m.api.previousVersion>2.0.0</io7m.api.previousVersion>
   </properties>
 
   <licenses>
     <license>
       <name>ISC License</name>
-      <url>http://io7m.com/license/isc.txt</url>
+      <url>https://io7m.com/license/isc.txt</url>
     </license>
   </licenses>
 
@@ -45,12 +44,12 @@
       <id>io7m</id>
       <name>io7m</name>
       <email>code@io7m.com</email>
-      <url>http://io7m.com</url>
+      <url>https://io7m.com</url>
     </developer>
   </developers>
 
   <issueManagement>
-    <url>http://github.com/io7m/jequality/issues</url>
+    <url>https://github.com/io7m/jequality/issues</url>
     <system>GitHub Issues</system>
   </issueManagement>
 
@@ -88,6 +87,16 @@
         <version>7.0.0</version>
       </dependency>
       <dependency>
+        <groupId>org.osgi</groupId>
+        <artifactId>org.osgi.annotation.bundle</artifactId>
+        <version>2.0.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.osgi</groupId>
+        <artifactId>org.osgi.annotation.versioning</artifactId>
+        <version>1.1.2</version>
+      </dependency>
+      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.13.2</version>
@@ -98,17 +107,6 @@
   <build>
     <pluginManagement>
       <plugins>
-        <!-- Require JDK >= 11 -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
-            <source>11</source>
-            <target>11</target>
-            <release>11</release>
-          </configuration>
-        </plugin>
-
         <!-- jstructural plugin for generating documentation. -->
         <plugin>
           <groupId>com.io7m.jstructural</groupId>
