--- a/com.io7m.jequality.core/pom.xml
+++ b/com.io7m.jequality.core/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.io7m.jequality</groupId>
     <artifactId>com.io7m.jequality</artifactId>
-    <version>3.0.1-SNAPSHOT</version>
+    <version>3.0.1</version>
   </parent>
   <artifactId>com.io7m.jequality.core</artifactId>
 
