--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.io7m.jequality</groupId>
   <artifactId>com.io7m.jequality</artifactId>
-  <version>3.0.1-SNAPSHOT</version>
+  <version>3.0.1</version>
 
   <packaging>pom</packaging>
   <name>com.io7m.jequality</name>
